[gd_scene load_steps=8 format=2]

[ext_resource path="res://Script/Geme_leaderboard.gd" type="Script" id=1]
[ext_resource path="res://Fonts/DePixelBreit.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprits/LeaderBoard.png" type="Texture" id=3]
[ext_resource path="res://Fonts/kenyan coffee rg.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/Music/Swinging Pants.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 3
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="Geme_leaderboard" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
modulate = Color( 0.482353, 0.662745, 0.705882, 1 )
position = Vector2( 505, 302 )
scale = Vector2( 1.04167, 1.04167 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="."]
margin_left = 334.0
margin_top = 29.0
margin_right = 701.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.894118, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Ranking Score"
align = 1
valign = 1

[node name="HTTP_add" type="HTTPRequest" parent="."]

[node name="HTTP_get" type="HTTPRequest" parent="."]

[node name="Painel_score" type="Label" parent="."]
margin_left = 237.0
margin_top = 140.0
margin_right = 778.0
margin_bottom = 566.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Timer" type="Timer" parent="."]

[node name="Win_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "Music"

[connection signal="request_completed" from="HTTP_add" to="." method="_on_HTTP_add_request_completed"]
[connection signal="request_completed" from="HTTP_get" to="." method="_on_HTTP_get_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
